# converterm

./: .env  .gitignore  README.md  bun.lockb  package.json
backend/: __main__.py  bun.lockb  package.json  pyproject.toml
backend/backend/: app.py
frontend/: bun.lockb  index.html  package.json  vite.config.ts
frontend/src/: app.scss  app.ts
